# gitrev-typed

./: gitrev-typed.cabal
.github/workflows/: ci.yaml
example/: example.cabal
