cabal-version: 2.2
name:          example
version:       0.1
synopsis:      Example gitrev-typed usage
build-type:    Simple
category:      Development
tested-with:
  GHC ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.4
   || ==9.10.1
   || ==9.12.1

source-repository head
  type:     git
  location: https://github.com/tbidne/gitrev-typed.git

common common-lang
  default-extensions:
    DeriveLift
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications

  default-language:   Haskell2010

executable example
  import:          common-lang
  main-is:         Main.hs
  other-modules:   Paths_example
  autogen-modules: Paths_example
  other-modules:
    TH
    TH.OsString

  build-depends:
    , base              >=4.15.0.0 && <4.23
    , gitrev-typed      ^>=0.1
    , os-string         ^>=2.0.0
    , template-haskell  >=2.17.0.0 && <2.25
    , time              >=1.9.3    && <1.15

  hs-source-dirs:  .
  ghc-options:     -threaded -with-rtsopts=-N
